# bzip2

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  ALGORITHMS  AUTHORS  CHANGES  CMakeLists.txt  CMakeOptions.txt  COMPILING.MD  COMPILING.md  Makefile  Makefile-libbz2_so  Makefile.am  NEWS  NEWS.md  README  README.COMPILATION.PROBLEMS  README.DOS  README.XML.STUFF  README.autotools  README.md  autogen.sh  blocksort.c  bzgrep  bzip2.1  bzip2.1.preformatted  bzip2.c  bzip2.doap  bzip2.txt  bzip2recover.c  bzlib.c  bzlib.h  bzlib_private.h  compress.c  configure.ac  crctable.c  decompress.c  dlltest.c  entities.xml  format.pl  (+26 more)
cmake/: SymLink.cmake
docs/: CMakeLists.txt  RELEASING.md  entities.xml  format.pl  manual.xml  meson.build  xmlproc.sh
man/: CMakeLists.txt  bzgrep.1  bzip2.1  bzip2.1.preformatted  meson.build
tests/: CMakeLists.txt  meson.build  runtest.py
